added open source link

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <footer>
+      This is coded by Kirsten McIntyre and is
+      <a href="https://github.com/kcodes57/travel-project">open sourced</a>
+    </footer>
   </body>
 </html>
