--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <h1>Hello World</h1>
     <footer>
       This is coded by Kirsten McIntyre and is
-      <a href="https://github.com/kcodes57/travel-project">open sourced</a>
+      <a href="https://github.com/kcodes57/travel-project" target="_blank"
+        >open sourced</a
+      >
     </footer>
   </body>
 </html>
