updated website header to name of project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Welcome to Edinburgh</h1>
     <footer>
       This is coded by Kirsten McIntyre and is
       <a href="https://github.com/kcodes57/travel-project" target="_blank"
