--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <h1>Welcome to Edinburgh</h1>
+    <h2>Capital city of Scotland</h2>
+    <button>Learn More</button>
     <footer>
       This is coded by Kirsten McIntyre and is
       <a href="https://github.com/kcodes57/travel-project" target="_blank"
