--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     <h2>Capital city of Scotland</h2>
     <button>Learn More</button>
     <footer>
-      This is coded by Kirsten McIntyre and is
-      <a href="https://github.com/kcodes57/travel-project" target="_blank"
-        >open sourced</a
-      >
+      <p>
+        This is coded by Kirsten McIntyre and is
+        <a href="https://github.com/kcodes57/travel-project" target="_blank"
+          >open sourced</a
+        >
+        on github
+      </p>
     </footer>
   </body>
 </html>
