--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Welcome to Edinburgh</h1>
-    <h2>Capital city of Scotland</h2>
-    <button>Learn More</button>
-    <footer>
-      <p>
-        This is coded by Kirsten McIntyre and is
-        <a href="https://github.com/kcodes57/travel-project" target="_blank"
-          >open sourced</a
-        >
-        on github
-      </p>
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Edinburgh</h1>
+        <h2>Capital city of Scotland</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        <p>
+          This is coded by Kirsten McIntyre and is
+          <a href="https://github.com/kcodes57/travel-project" target="_blank"
+            >open sourced</a
+          >
+          on github
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
