--- a/index.html
+++ b/index.html
@@ -20,18 +20,22 @@
         <h2>Capital city of Scotland</h2>
         <a href="#more">Learn more</a>
       </header>
-      <div class="edinburgh">
-        <img
-          class="img-water"
-          src="images/pexels-serra-vazgecen-132129626-27815146.jpg"
-          alt="water in Edinburgh"
-        />
-        <ul>
-          <h3>Why Edinburgh</h3>
-          <h2>Edinburgh, Athens of the North</h2>
-          <p>insert next here</p>
-        </ul>
-      </div>
+      <main>
+        <section>
+          <div class="edinburgh">
+            <img
+              class="img-water"
+              src="images/pexels-serra-vazgecen-132129626-27815146.jpg"
+              alt="water in Edinburgh"
+            />
+            <ul>
+              <h3>Why Edinburgh</h3>
+              <h2>Edinburgh, Athens of the North</h2>
+              <p>insert next here</p>
+            </ul>
+          </div>
+        </section>
+      </main>
 
       <footer>
         <div class="about-city">
