added city description

--- a/index.html
+++ b/index.html
@@ -21,20 +21,35 @@
         <a href="#more">Learn more</a>
       </header>
       <main>
-        <section>
-          <div class="edinburgh">
-            <img
-              class="img-water"
-              src="images/pexels-serra-vazgecen-132129626-27815146.jpg"
-              alt="water in Edinburgh"
-            />
-            <ul>
-              <h3>Why Edinburgh</h3>
-              <h2>Edinburgh, Athens of the North</h2>
-              <p>insert next here</p>
-            </ul>
-          </div>
+        <section class="edinburgh">
+          <img
+            class="img-responsive"
+            src="images/pexels-serra-vazgecen-132129626-27815146.jpg"
+            alt="water in Edinburgh"
+          />
+          <ul>
+            <h3>Why Edinburgh</h3>
+            <h2>Edinburgh, Athens of the North</h2>
+            <p>
+              Since the early 19th century, Edinburgh has been widely referred
+              to as the "Athens of the North." This comparison began as early as
+              the 1760s, with terms like "Athens of Britain" and "Modern Athens"
+              being used. The similarities between the two cities were seen in
+              both their topography and intellectual life. Edinburgh's Castle
+              Rock was reminiscent of the Athenian Acropolis, while its
+              neoclassical architecture and the layout of the New Town also drew
+              comparisons. Both cities had flat, fertile agricultural land
+              sloping down toward a port (Leith in Edinburgh, and Piraeus in
+              Athens). The Scottish Enlightenment, which emphasized humanism and
+              rationalism, was also influenced by Ancient Greek philosophy. In
+              1822, artist Hugh William Williams showcased his paintings of
+              Athens alongside those of Edinburgh, solidifying the parallel
+              between the cities in the public's imagination.
+            </p>
+          </ul>
         </section>
+        <section></section>
+        <section></section>
       </main>
 
       <footer>
