--- a/index.html
+++ b/index.html
@@ -48,7 +48,91 @@
             </p>
           </ul>
         </section>
-        <section></section>
+        <section class="cafes">
+          <h4>Places to eat</h4>
+          <h2>My favorite places to eat</h2>
+          <ul>
+            <li>link and map</li>
+          </ul>
+          <ul>
+            <li>
+              <h3>The Advocate</h3>
+              <p>
+                Visit the Advocate, a cozy pub in Edinburgh's old town. By day,
+                it's a laid-back spot for locals, workers, and tourists, serving
+                Belhaven Best and classic pub fare. In the evening, enjoy live
+                music from artists like Martin Andrews and Mike Patterson. With
+                a 206-person capacity, it can get lively.
+              </p>
+            </li>
+            <li>
+              <h5>address</h5>
+              <p>7 Hunter Square</p>
+            </li>
+            <li>
+              <h5>
+                What I like about it
+                <p>
+                  Its very comfortable and has a nice atmosphere. Wide food
+                  selection and fast service
+                </p>
+              </h5>
+            </li>
+          </ul>
+          <ul>
+            <li>link and map</li>
+          </ul>
+          <ul>
+            <li>
+              <h3>The Haggis Box</h3>
+              <p>
+                Scottish Haggis served the Traditional Way with Neeps & Tatties.
+                Vegan & vegetarian available too! Try Haggis with one of our
+                delicious sauces. Find us inside the Scottish Storytelling
+                Center!
+              </p>
+            </li>
+            <li>
+              <h5>address</h5>
+              <p>43-45 High Street Scottish Storytelling Center</p>
+            </li>
+            <li>
+              <h5>
+                What I like about it
+                <p>
+                  It has great value for its money. THey have vegetarian/vegan
+                  options and cater to various dietary needs
+                </p>
+              </h5>
+            </li>
+          </ul>
+          <ul>
+            <li>link and map</li>
+          </ul>
+          <ul>
+            <li>
+              <h3>Black Rose Tavern</h3>
+              <p>
+                Carries domestic & premium beers along with a full line of
+                spirits. Featuring daily drink specials. Free poker on Monday
+                and Thursday nights. Free WiFi.
+              </p>
+            </li>
+            <li>
+              <h5>address</h5>
+              <p>49 Rose Street</p>
+            </li>
+            <li>
+              <h5>
+                What I like about it
+                <p>
+                  This restaurant is off the beaten path on Rose Street so it is
+                  a bit quieter. Great value for the price and nice atmosphere
+                </p>
+              </h5>
+            </li>
+          </ul>
+        </section>
         <section></section>
       </main>
 
