added some styling to card

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                   alt="advocate-exterior"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2233.8092442108896!2d-3.2006890230791796!3d55.95267807315895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c790d94ff749%3A0x9fe103a3cffd4650!2sThe%20Black%20Rose%20Tavern!5e0!3m2!1sen!2sus!4v1732485144815!5m2!1sen!2sus"
+                  width="400"
+                  height="300"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h3>The Advocate</h3>
@@ -66,8 +75,7 @@
                   Visit the Advocate, a cozy pub in Edinburgh's old town. By
                   day, it's a laid-back spot for locals, workers, and tourists,
                   serving Belhaven Best and classic pub fare. In the evening,
-                  enjoy live music from artists like Martin Andrews and Mike
-                  Patterson. With a 206-person capacity, it can get lively.
+                  enjoy live music.
                 </p>
 
                 <h5>Address:</h5>
