--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </ul>
         </section>
         <section class="cafes">
-          <h4>Places to eat</h4>
-          <h2>My favorite places to eat</h2>
+          <h3>CAFÉS</h3>
+          <h2>Places to eat</h2>
           <div class="cafes-grid">
             <div class="card">
               <div class="card-header">
@@ -59,15 +59,6 @@
                   alt="advocate-exterior"
                   class="img-responsive"
                 />
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2233.8092442108896!2d-3.2006890230791796!3d55.95267807315895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c790d94ff749%3A0x9fe103a3cffd4650!2sThe%20Black%20Rose%20Tavern!5e0!3m2!1sen!2sus!4v1732485144815!5m2!1sen!2sus"
-                  width="400"
-                  height="300"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
               </div>
               <div class="card-body">
                 <h3>The Advocate</h3>
