added map embeds

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                   alt="advocate-exterior"
                   class="img-responsive"
                 />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4467.982519809112!2d-3.1879529999999994!3d55.9495234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c7859cc62597%3A0xc355fad7801ff966!2sThe%20Advocate!5e0!3m2!1sen!2sus!4v1732556307288!5m2!1sen!2sus"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h3>The Advocate</h3>
@@ -89,12 +97,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header cafes-grid-img">
                 <img
                   src="images/haggis-box_thumbnail_1920x1080.jpg"
                   alt="Haggis-Box"
                   class="img-responsive"
                 />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2233.9219144820718!2d-3.1848950999999994!3d55.950725299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c75ca808a897%3A0xd56d4e983319cf5!2sThe%20Haggis%20Box!5e0!3m2!1sen!2sus!4v1732555815816!5m2!1sen!2sus"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
@@ -132,6 +148,14 @@
                   alt="Black-Rose-Tavern"
                   class="img-responsive"
                 />
+                <iframe
+                  class="embed"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2233.8092426622084!2d-3.1981140999999997!3d55.9526781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c790d94ff749%3A0x9fe103a3cffd4650!2sThe%20Black%20Rose%20Tavern!5e0!3m2!1sen!2sus!4v1732556354969!5m2!1sen!2sus"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h3>Black Rose Tavern</h3>
