--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://maps.app.goo.gl/2ava5AzaCaT1vPtQA"
+                  href="https://www.belhaven.co.uk/pubs/edinburgh/advocate"
                   class="btn"
                   target="_blank"
                 >
@@ -133,7 +133,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://maps.app.goo.gl/nDmHRSmky5C7fxQv6"
+                  href="https://www.thehaggisbox.com/"
                   class="btn"
                   target="_blank"
                 >
@@ -177,7 +177,7 @@
 
               <div class="card-footer">
                 <a
-                  href="https://maps.app.goo.gl/cDNV3Fwrew5uqZTe7"
+                  href="https://www.blackrosetavern.com/"
                   class="btn"
                   target="_blank"
                 >
