--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
         </section>
         <section class="cafes">
-          <h3>CAFÉS</h3>
+          <h4>CAFÉS</h4>
           <h2>Places to eat</h2>
           <div class="cafes-grid">
             <div class="card">
@@ -88,7 +88,7 @@
               </div>
               <div class="card-footer">
                 <a
-                  href="https://www.belhaven.co.uk/pubs/edinburgh/advocate"
+                  href="https://www.belhaven.co.uk/pubs/edinburgh/advocate  "
                   class="btn"
                   target="_blank"
                 >
@@ -162,13 +162,14 @@
                 <p>
                   Carries domestic & premium beers along with a full line of
                   spirits. Featuring daily drink specials. Free poker on Monday
-                  and Thursday nights. Free WiFi.
+                  and Thursday nights. Free WiFi. Off the beaten track on Rose
+                  Street.
                 </p>
 
                 <h5>Address:</h5>
                 <p>49 Rose Street</p>
 
-                <h5>What I like about it</h5>
+                <h5>What I like about it:</h5>
                 <p>
                   This restaurant is off the beaten path on Rose Street so it is
                   a bit quieter. Great value for the price and nice atmosphere
