--- a/index.html
+++ b/index.html
@@ -1323,7 +1323,7 @@
             <script async src="//www.instagram.com/embed.js"></script>
             <blockquote
               class="instagram-media"
-              data-instgrm-permalink="https://www.instagram.com/p/C_OhE4etVdT/?utm_source=ig_embed&amp;utm_campaign=loading"
+              data-instgrm-permalink="https://www.instagram.com/p/DCZeOB7N9Te/?utm_source=ig_embed&amp;utm_campaign=loading"
               data-instgrm-version="14"
               style="
                 background: #fff;
@@ -1342,7 +1342,7 @@
             >
               <div style="padding: 16px">
                 <a
-                  href="https://www.instagram.com/p/C_OhE4etVdT/?utm_source=ig_embed&amp;utm_campaign=loading"
+                  href="https://www.instagram.com/p/DCZeOB7N9Te/?utm_source=ig_embed&amp;utm_campaign=loading"
                   style="
                     background: #ffffff;
                     line-height: 0;
@@ -1586,7 +1586,7 @@
                   "
                 >
                   <a
-                    href="https://www.instagram.com/p/C_OhE4etVdT/?utm_source=ig_embed&amp;utm_campaign=loading"
+                    href="https://www.instagram.com/p/DCZeOB7N9Te/?utm_source=ig_embed&amp;utm_campaign=loading"
                     style="
                       color: #c9c8cd;
                       font-family: Arial, sans-serif;
@@ -1597,11 +1597,12 @@
                       text-decoration: none;
                     "
                     target="_blank"
-                    >A post shared by John Murray | Scotland (@johnmurrayjnr)</a
+                    >A post shared by Shirin ghosh (@snapsbyshirin)</a
                   >
                 </p>
               </div>
             </blockquote>
+            <script async src="//www.instagram.com/embed.js"></script>
             <script async src="//www.instagram.com/embed.js"></script>
             <blockquote
               class="instagram-media"
